# deepredmt

./: README.md  pyproject.toml
data/: README.md  seqs.fas  wins.txt
deepredmt/: __init__.py  cli.py  data_handler.py  finetune.py  layers.py  losses.py  metrics.py  models.py  models2.py  models3.py  predict.py  pretrain1.py  project.py  train.py  utils.py
fasta/: lopho.fas
model/210421-1205.tf/: saved_model.pb
model/210421-1205.tf/variables/: variables.index
model/210520.tf/variables/: variables.index
notebooks/: 01_prediction_from_fasta.ipynb  02_reproduce_comparative_analysis.ipynb  03_deepredmt_training.ipynb  04_single_sequence_submission.ipynb  05_fasta_submission.ipynb
