[tool.poetry]
name = "deepredmt"
version = "0.1.0"
description = "Neural-based approach for predicting editing sites in plant mitochondrial genomes."
authors = ["Alejandro A. Edera <aedera@sinc.unl.edu.ar>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = ">=2.4.1, <2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
